# robofactor

./: .gitignore  .windsurfrules  CLAUDE.md  Makefile  README.md  coverage.xml  experiments.py  mlflow.db  optimized.json  pyproject.toml
.github/workflows/: publish.yml
.windsurf/rules/: python-guidelines.md
docs/: issues-in-typer.md  modern_python_patterns.md
mlartifacts/1/traces/3f45e04843e847f7b109c81e3e7b067c/artifacts/: traces.json
mlartifacts/1/traces/52ef3251d3414c50b727e9242a8a2357/artifacts/: traces.json
mlartifacts/1/traces/7130904900c24126bfcd0b196e09da84/artifacts/: traces.json
mlartifacts/1/traces/7fa86f8deb364bcb94486d3fcbd28a79/artifacts/: traces.json
mlartifacts/1/traces/ad953d5702cc421b9690f74712b4f7ae/artifacts/: traces.json
mlartifacts/1/traces/d96d71dc174c44c782fb723d825ab9e2/artifacts/: traces.json
mlartifacts/983085428396950559/traces/e9b1654ea950447e998032afcd757a88/artifacts/: traces.json
mlruns/0/: meta.yaml
mlruns/983085428396950559/: meta.yaml
mlruns/983085428396950559/traces/e9b1654ea950447e998032afcd757a88/: trace_info.yaml
mlruns/983085428396950559/traces/e9b1654ea950447e998032afcd757a88/request_metadata/: mlflow.source.git.commit  mlflow.source.git.repoURL  mlflow.traceInputs
mlruns/983085428396950559/traces/e9b1654ea950447e998032afcd757a88/tags/: mlflow.artifactLocation  mlflow.traceName
optimized/: program.pkl
scripts/: create_diffs.py  generate_readme.py  replace_list_with_sequence.py
src/refactor_tool/: analysis_utils.py  config.py  dspy_modules.py  evaluation.py  ui.py
src/resting_agent/: __init__.py  __main__.py  agent.py  executors.py  signatures.py
src/resting_agent/core/: args.py  cli.py  config.py  constants.py  models.py  types.py
src/resting_agent/services/: files.py  shell.py
src/robofactor/: __init__.py  analysis.py  config.py  dspy_modules.py  evaluation.py  function_extraction.py  functional_types.py  main.py  models.py  training_data.json  types.py  ui.py  utils.py
src/robofactor/app/: __init__.py  config.py  main.py  ui.py
src/robofactor/common/: __init__.py  ast_utils.py  code_extraction.py  json_validation.py
src/robofactor/data/: __init__.py  examples.py  models.py
src/robofactor/data/_internal/: __init__.py  collectors.py  parsers.py
src/robofactor/evaluation/: __init__.py  checkers.py  pipeline.py
src/robofactor/json/: is_json_list.py  types.py
src/robofactor/modules/: code_refactor.py
src/robofactor/parsing/: __init__.py  analysis.py  ast_parser.py  models.py
src/robofactor/refactoring/: __init__.py  evaluator.py  module.py  signatures.py
src/robofactor/signatures/: code_analysis.py  final_evaluation.py  refactored_code.py  refactoring_plan.py
src/robofactor/training/: models.py  training_loader.py
src/robofactor/utils/: __init__.py  load_json.py
tests/analysis/: test_extract_python_code.py
tests/data/: test_examples.py
tests/data_internal/: test_collectors.py  test_parsers.py
tests/evaluation/: test_evaluate_refactored_code.py
tests/main/: test_reward_fn.py
tests/utils/: test_load_json.py
typings/dspy/: __init__.pyi  __metadata__.pyi
typings/dspy/adapters/: __init__.pyi  base.pyi  chat_adapter.pyi  json_adapter.pyi  two_step_adapter.pyi  utils.pyi  xml_adapter.pyi
typings/dspy/adapters/types/: __init__.pyi  audio.pyi  base_type.pyi  history.pyi  image.pyi  tool.pyi
typings/dspy/clients/: __init__.pyi  base_lm.pyi  cache.pyi  databricks.pyi  embedding.pyi  lm.pyi  lm_local.pyi  lm_local_arbor.pyi  openai.pyi  provider.pyi  utils_finetune.pyi
typings/dspy/datasets/: __init__.pyi  colors.pyi  dataloader.pyi  dataset.pyi  hotpotqa.pyi  math.pyi
typings/dspy/datasets/alfworld/: __init__.pyi  alfworld.pyi
typings/dspy/dsp/: colbertv2.pyi
typings/dspy/dsp/utils/: __init__.pyi  dpr.pyi  metrics.pyi  settings.pyi  utils.pyi
typings/dspy/evaluate/: __init__.pyi  auto_evaluation.pyi  evaluate.pyi  metrics.pyi
typings/dspy/experimental/: __init__.pyi  module_graph.pyi  synthetic_data.pyi
typings/dspy/experimental/synthesizer/: __init__.pyi  config.pyi  instruction_suffixes.pyi  signatures.pyi  synthesizer.pyi  utils.pyi
typings/dspy/predict/: __init__.pyi  aggregation.pyi  best_of_n.pyi  chain_of_thought.pyi  chain_of_thought_with_hint.pyi  code_act.pyi  knn.pyi  multi_chain_comparison.pyi  parallel.pyi  parameter.pyi  predict.pyi  program_of_thought.pyi  react.pyi  refine.pyi
typings/dspy/predict/avatar/: __init__.pyi  avatar.pyi  models.pyi  signatures.pyi
typings/dspy/primitives/: __init__.pyi  base_module.pyi  example.pyi  module.pyi  prediction.pyi  program.pyi  python_interpreter.pyi
typings/dspy/propose/: __init__.pyi  dataset_summary_generator.pyi  grounded_proposer.pyi  propose_base.pyi  utils.pyi
typings/dspy/retrieve/: __init__.pyi  azureaisearch_rm.pyi  chromadb_rm.pyi  clarifai_rm.pyi  databricks_rm.pyi  deeplake_rm.pyi  epsilla_rm.pyi  falkordb_rm.pyi  lancedb_rm.pyi  llama_index_rm.pyi  marqo_rm.pyi  milvus_rm.pyi  mongodb_atlas_rm.pyi  neo4j_rm.pyi  pgvector_rm.pyi  pinecone_rm.pyi  ragatouille_rm.pyi  retrieve.pyi  snowflake_rm.pyi  vectara_rm.pyi  watson_discovery_rm.pyi  weaviate_rm.pyi  you_rm.pyi
typings/dspy/retrievers/: __init__.pyi  databricks_rm.pyi  embeddings.pyi  retrieve.pyi  weaviate_rm.pyi
typings/dspy/signatures/: __init__.pyi  field.pyi  signature.pyi  utils.pyi
typings/dspy/streaming/: __init__.pyi  messages.pyi  streamify.pyi  streaming_listener.pyi
typings/dspy/teleprompt/: __init__.pyi  avatar_optimizer.pyi  bettertogether.pyi  bootstrap.pyi  bootstrap_finetune.pyi  copro_optimizer.pyi  ensemble.pyi  grpo.pyi  infer_rules.pyi  knn_fewshot.pyi  mipro_optimizer_v2.pyi  random_search.pyi  signature_opt.pyi  simba.pyi  simba_utils.pyi  teleprompt.pyi  teleprompt_optuna.pyi  utils.pyi  vanilla.pyi
typings/dspy/utils/: __init__.pyi  asyncify.pyi  caching.pyi  callback.pyi  dummies.pyi  exceptions.pyi  inspect_history.pyi  langchain_tool.pyi  logging_utils.pyi  mcp.pyi  parallelizer.pyi  saving.pyi  unbatchify.pyi  usage_tracker.pyi
